--- a/Calculator/css/style.scss
+++ b/Calculator/css/style.scss
@@ -112,6 +112,7 @@ html {
       justify-content: center;
       align-items: center;
       justify-self: stretch;
+      cursor: pointer;
     }
 
     .button__clear {
